	- add ".arch" suffix to erase colored packages with identical NEVR.
	- update ja man pages (#92261).
	- backport rpmsw stopwatch, insturment rpmts operations.
	- toy method to enable --stats through bindings.
	- fdCLose typo (#97257).
	- brp-python-bytecompile to automagically bytecode compile python.
	- update for fr.po (#97829).
	- don't attempt to remove dbenv on --rebuilddb.

4.1 -> 4.2:
	- set cachesize without a dbenv, the default is far too small.
	- db: don't return EACCES on db->close w/o environment.
	- unify cachesize configuration, with (or without) a dbenv.
	- comments regarding unsupported (yet) db-4.1.17 functionality.
	- update to db-4.1.24 final.
	- eliminate myftw, use Fts(3) instead.
	- dump libelf, gulp elfutils, for now.
	- python: permit headers to be hashed.
	- use %%{_lib} for libraries.
	- include file-3.39 (with homebrewed) libfmagic, for now.
	- add debug sub-package patch.
	- re-add elfutils/libdwarf (for dwarf.h), eliminate tools/dwarf2.h.
	- resurrect genhdlist "greased lightning" pathway for now.
	- elfutils: avoid gcc-3.2 ICE on x86_64 for now.
	- add /usr/lib/rpm/rpmdeps.
	- add /usr/lib/rpm/magic.
	- fix: /dev/initctl has not MD5 segfault (#76718).
	- rpm.8: gpg uses GNUPGHOME, not GPGPATH (#76691).
	- add error message on glob failure (#76012).
	- add _javadir/_javadocdir/_javaclasspath macros.
	- fix: bash must have functional libtermcap.so.2.
	- update to elfutils-0.56.
	- have debug sub-subpackage use external, not internal, elfutils.
	- apply patches 1-6 to db-4.1.24.
	- resurrect availablePackages one more time.
	- fix: option conflict error message (#77373).
	- add AC_SYS_LARGFILE throughout.
	- statically link rpmdeps against (internal) libfmagic.
	- use rpmdeps rather than find-{requires,provides}.
	- bundle libfmagic into librpmbuild for now.
	- apply patches 7 and 8 to db-4.1.24.
	- upgrade to elfutils-0.59.
	- add -g to all platforms optflags.
	- build with external elfutils (preferred), if available.