@@ -1147,12 +1147,14 @@ esac
 AC_SUBST(MARK64)
 
 dnl Determine the canonical arch-vendor-os for the build machine
+autorelocate_path='%{nil}'
 case "${build_cpu}" in
 *86)		RPMCANONCOLOR=0; RPMCANONARCH=i386 ;;
 x86_64*)	RPMCANONCOLOR=3; RPMCANONARCH=x86_64 ;;
 alpha*)		RPMCANONCOLOR=0; RPMCANONARCH=alpha ;;
 sparc*)		RPMCANONCOLOR=0; RPMCANONARCH=sparc ;;
-ia64*)		RPMCANONCOLOR=0; RPMCANONARCH=ia64 ;;
+ia64*)		RPMCANONCOLOR=2; RPMCANONARCH=ia64;
+		autorelocate_path='/emul/%%{ARCH}-%%{OS}' ;;
 s390x*)		RPMCANONCOLOR=3; RPMCANONARCH=s390x ;;
 s390*)		RPMCANONCOLOR=0; RPMCANONARCH=s390 ;;
 powerpc64*|ppc64*)	RPMCANONCOLOR=3; RPMCANONARCH=ppc64 ;;
@@ -1182,6 +1184,7 @@ unknown|pc|ibm|redhat|pld|mandrake|conectiva|lvr|yellowdog)
 esac
 RPMCANONOS="$build_os_noversion"
 AC_SUBST(RPMCANONCOLOR)
+AC_SUBST(autorelocate_path)
 AC_SUBST(RPMCANONARCH)
 AC_SUBST(RPMCANONVENDOR)
 AC_SUBST(RPMCANONOS)
