@@ -106,6 +106,7 @@ struct rpmte_s {
     fnpyKey key;		/*!< (TR_ADDED) Retrieval key. */
 /*@owned@*/ /*@null@*/
     rpmRelocation * relocs;	/*!< (TR_ADDED) Payload file relocations. */
+    int nrelocs;		/*!< (TR_ADDED) No. of relocations. */
 /*@refcounted@*/ /*@null@*/	
     FD_t fd;			/*!< (TR_ADDED) Payload file descriptor. */
 
