@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.18
+Release: 0.19
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -476,6 +476,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Wed Jul  2 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.19
+- autorelocate ix86 package file paths on ia64.
+
 * Tue Jul  1 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.18
 - don't attempt to remove dbenv on --rebuilddb.
 - rebuild.
