@@ -16,6 +16,7 @@
 	- brp-python-bytecompile to automagically bytecode compile python.
 	- update for fr.po (#97829).
 	- don't attempt to remove dbenv on --rebuilddb.
+	- autorelocate ix86 package file paths on ia64.
 
 4.1 -> 4.2:
 	- set cachesize without a dbenv, the default is far too small.
